Little updates, added component-model-dev.json which will be used when publishing to maven local instead.